--- a/quoting_dojo/views/index.ejs
+++ b/quoting_dojo/views/index.ejs
@@ -4,12 +4,20 @@
 	<title></title>
 </head>
 <body>
-<h1>WTF mate</h1>
+
 	<% if(typeof(errors) != 'undefined') { %>
 		<% for (var x in errors) { %>
 		<h3><%= errors[x].message %></h3>
 		<% } %>
 		<% } %>
+		<form action="/quotes" method="post">
+			<label>name:</label>
+			<input type="text" name="name">
+			<label>quote:</label>
+			<input type="text" name="quote">
+			<input type="submit">
+
+		</form>
 	
 
 	
