--- a/car_blog/carBlog/src/app/home/home.component.html
+++ b/car_blog/carBlog/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div>
+<div id="wrapper">
 	<h3>Welcome to my portfolio/automotive blog</h3>
 
 	<p>I am a software engineer and as you can see a big automotive enthusiast.  This website demostrates a little of what I can do with the MEAN stack.  Thank you for taking a look, and I hope you enjoy it.</p>
