--- a/car_blog/carBlog/src/app/login/login.component.html
+++ b/car_blog/carBlog/src/app/login/login.component.html
@@ -1,41 +1,64 @@
 <div id="wrapper">
 	<h3>Log in or Sign up to countinue your journey of being a petrolhead</h3>
-	<form #form="ngForm" (submit)="createUser($event)">
-		<label>first name: </label>
-		<input 
-			type="text"
-			name="first_name"
-			minlength="3"
-			[(ngModel)]="newUser.first_name"
-			#first_name="ngModel">
-		<label>Last name: </label>
-		<input
+	<div id="login">
+		<h3>Login: </h3>
+		<form #form="ngForm" (submit)="loginUser($event)">
+			<label>email: </label>
+			<input type="text" 
+			name="email"
+			[(ngModel)]="loginInfo.email"
+			#email="ngModel">
+			<label>password: </label>
+			<input type="password" 
+			name="password"
+			[(ngModel)]="loginInfo.password"
+			#password="ngModel">
+
+			<input [disabled]="!form.valid" type="submit">
+
+		</form>
+		
+	</div>
+	<div id="registration">
+		<h3>Register:</h3>
+		<form #form="ngForm" (submit)="createUser($event)">
+			<label>first name: </label>
+			<input 
+				type="text"
+				name="first_name"
+				minlength="3"
+				[(ngModel)]="newUser.first_name"
+				#first_name="ngModel">
+			<label>Last name: </label>
+			<input
 			type="text"
 			name="last_name"
 			minlenth="3"
 			[(ngModel)]="newUser.last_name"
 			#last_name="ngModel">
-		<label>Email: </label>
-		<input 
-			type="text" 
-			name="email" 
-			[(ngModel)]="newUser.email"
-			#email="ngModel">
-		<label>Username: </label>
-		<input
-			type="text" 
-			name="Username"
-			minlength="3"
-			[(ngModel)]="newUser.username"
-			#username="ngModel">
-		<label>Password: </label>
-		<input 
-			type="password" 
-			name="password"
-			minlength="6"
-			[(ngModel)]="newUser.password"
-			#password="ngModel">
-		<input [disabled]="!form.valid" type="submit">
-	</form>
+			<label>Email: </label>
+			<input 
+				type="text" 
+				name="email" 
+				[(ngModel)]="newUser.email"
+				#email="ngModel">
+			<label>Username: </label>
+			<input
+				type="text" 
+				name="Username"
+				minlength="3"
+				[(ngModel)]="newUser.username"
+				#username="ngModel">
+			<label>Password: </label>
+			<input 
+				type="password" 
+				name="password"
+				minlength="6"
+				[(ngModel)]="newUser.password"
+				#password="ngModel">
+			<input [disabled]="!form.valid" type="submit">
+		</form>
+
+	</div>
 
 </div>
