--- a/car_blog/carBlog/src/app/showroom/showroom.component.html
+++ b/car_blog/carBlog/src/app/showroom/showroom.component.html
@@ -1,32 +1,29 @@
-<p>
-  showroom works!
-</p>
+<div id="wrapper">
+	<h3>Welcome to the showroom</h3>
+	<button [routerLink]="['/factory']">Create Review</button>
 
 
-<form #form="ngForm" (submit)="addReview($event)">
 
-	<label>make: </label>
-	<input type="text" 
-	name="make"
-	minlength="3"
-	[(ngModel)]="newReview.make"
-	#make="ngModel">
 
-	<label>model: </label>
-	<input type="text" 
-	name="model"
-	minlength="3"
-	[(ngModel)]="newReview.model"
-	#model="ngModel">
 
-	<label>description: </label>
-	<input type="text" 
-	name="description"
-	minlength="8"
-	[(ngModel)]="newReview.description"
-	#description="ngModel">
-
-	<input type="submit">
-	
-
-</form>
+	<div id="reviews">
+		<div *ngFor="let reviews of reviews">
+			<h5>{{reviews.year}} {{reviews.make}} {{reviews.model}}</h5>
+			<p>{{reviews.description}}</p>
+		</div>
+	</div>
+	<!-- 	<table>
+			<tr>
+				<th>year:</th>
+				<th>Make:</th>
+				<th>Model:</th>
+				<th>Desription:</th>
+			</tr>
+			<tr *ngFor="let reviews of reviews">
+				<td>{{reviews.year}}</td>
+				<td>{{reviews.make}}</td>
+				<td>{{reviews.model}}</td>
+				<td>{{reviews.description}}</td>
+			</tr>
+		</table> -->
+</div>
